Add header, categories, routing

--- a/barcode-research-service/barcode-research-service-ui/src/app/app.component.html
+++ b/barcode-research-service/barcode-research-service-ui/src/app/app.component.html
@@ -1,1 +1,7 @@
-<gfp-inverse></gfp-inverse>
+<body>
+  <app-header></app-header>
+  <div class="router">
+    <router-outlet></router-outlet>
+  </div>
+</body>
+
