--- a/barcode-research-service/barcode-research-service-ui/src/app/components/header/header.component.html
+++ b/barcode-research-service/barcode-research-service-ui/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
   <nav>
+    <h1>Калькулятор Галуа</h1>
     <ul class="menu">
       <li><a routerLink="gfOperations">Операції в скінченних полях</a></li>
       <li><span class="separator">|</span></li>
