Split finite-field-calculator and barcode-generator service. Add icon. Change deployment scripts

--- a/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/header/header.component.html
+++ b/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <header>
   <nav>
-    <h1>Калькулятор Галуа</h1>
+    <div class="title">
+      <img src="favicon.ico">
+      <h1>Калькулятор Галуа</h1>
+    </div>
     <ul class="menu">
       <li><a routerLink="gfOperations">Операції в скінченних полях</a></li>
       <li><span class="separator">|</span></li>
