--- a/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/header/header.component.css
+++ b/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/header/header.component.css
@@ -46,8 +46,15 @@ nav {
   color: #ffcc00; /* Change color for active link */
 }
 
-.menu.title li {
+.menu.title {
   font-size: 30px;
+}
+
+.title {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: 20px;
 }
 
 nav {
