--- a/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/gfp-div-poly/gfp-div-poly.component.html
+++ b/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/gfp-div-poly/gfp-div-poly.component.html
@@ -12,10 +12,10 @@
 
     <button (click)="findMul()">Поділити многочлени</button>
 
-    <label for="resInput">Результат:</label>
+    <label for="resInput">Частка:</label>
     <input id="resInput" type="text" [value]="result" readonly>
 
-    <label for="restInput">Частка:</label>
+    <label for="restInput">Остача:</label>
     <input id="restInput" type="text" [value]="rest" readonly>
   </div>
 </div>
