Add reed-solomon operations components

--- a/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/header/header.component.html
+++ b/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/header/header.component.html
@@ -9,6 +9,8 @@
       <li><span class="separator">|</span></li>
       <li><a routerLink="polynomOperations">Операції з многочленами</a></li>
       <li><span class="separator">|</span></li>
+      <li><a routerLink="reedSolomonOperations">Операції коду Ріда-Соломона</a></li>
+      <li><span class="separator">|</span></li>
       <li><a routerLink="otherOperations">Інше</a></li>
     </ul>
   </nav>
