Add poly multiplication by module component

--- a/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/polynom-operations/polynom-operations.component.html
+++ b/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/polynom-operations/polynom-operations.component.html
@@ -1,3 +1,4 @@
 <gfp-mul-poly></gfp-mul-poly>
 <gfp-div-poly></gfp-div-poly>
 <gfp-poly-value></gfp-poly-value>
+<gfp-mul-poly-modulo></gfp-mul-poly-modulo>
