GFP check primitivity component

--- a/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/reed-solomon-generator-poly/reed-solomon-generator-poly.component.html
+++ b/finite-field-calculator-service/finite-field-calculator-service-ui/src/app/components/reed-solomon-generator-poly/reed-solomon-generator-poly.component.html
@@ -10,7 +10,7 @@
     <label for="powerInput">Степінь:</label>
     <input id="powerInput" type="text" [(ngModel)]="power">
 
-    <button (click)="findPolyVal()">Знайти твірний многочлен</button>
+    <button (click)="findGeneratorPoly()">Знайти твірний многочлен</button>
 
     <label for="resInput">Результат:</label>
     <input id="resInput" type="text" [value]="result" readonly>
